fix text align in service details modal

--- a/style.css
+++ b/style.css
@@ -186,8 +186,8 @@ main{
     overflow-y: scroll;
 }
 
-.service-modal-body h6{
-    font-size: large;
+.service-modal-body h5{
+    font-size: larger;
     font-weight: bold;
     color: var(--text);
 }
@@ -195,7 +195,13 @@ main{
 .service-modal-body ul{
     font-size: medium;
     color: var(--text);
-    padding: 0 0 0 1rem;
+    list-style-type: none;
+}
+
+.service-modal-body ul li h6{
+    font-size: medium;
+    font-weight: 600;
+    margin-top: 0.8rem;
 }
 
 body{
